overflow hidden bug resolved

--- a/src/components/mobile-select/mobile-select.css
+++ b/src/components/mobile-select/mobile-select.css
@@ -60,9 +60,13 @@
     right: 0.1rem;
 }
 
-.typeAheadDropDown .dropDownList #active {
+.darkTheme .typeAheadDropDown .dropDownList #active {
     background-color: #fff;
     color: #000;
+}
+
+.typeAheadDropDown .dropDownList #active {
+    background-color: lightgrey;
 }
 
 .darkTheme .typeAheadDropDown::after {
